# RecipeParser

./: .coverage  .dockerignore  .gitignore  ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  GEMINI.md  MIGRATION_PLAN.md  PIPELINE_REFACTOR.md  PROVIDER_GUIDE.md  README.md  RELEASE_NOTES_v2.2.0.md  baseline_mypy.txt  build_installer.ps1  categories.yaml  cleanup_jobs.py  docker-compose.yml  installer.iss  kill_server.py  pyproject.toml  recipeparser.py  recipeparser.spec  requirements.txt  start_server.py  test_ingest.py  test_recipeparser.py
.githooks/: README.md  pre-push
.github/workflows/: build-installer.yml
docs/: DESIGN_DOCUMENT_LOADER.md  DESIGN_PDF_AND_TOC.md
recipeparser/: __init__.py  __main__.py  api.py  categories.py  categories.yaml  config.py  epub.py  exceptions.py  export.py  gemini.py  gui.py  models.py  paprika_db.py  paths.py  pdf.py  pipeline.py  recategorize.py  supabase_writer.py  toc.py  utils.py
recipeparser/adapters/: __init__.py  api.py  cli.py  gui.py
recipeparser/core/: engine.py  fsm.py  models.py  pipeline.py  ports.py  rate_limiter.py
recipeparser/core/stages/: __init__.py  assemble.py  categorize.py  embed.py  extract.py  refine.py
recipeparser/io/category_sources/: __init__.py  base.py  paprika_db.py  supabase_source.py  yaml_source.py
recipeparser/io/readers/: __init__.py  epub.py  paprika.py  pdf.py  url.py
recipeparser/io/writers/: __init__.py  cayenne_zip.py  paprika_zip.py  supabase.py
tests/: conftest.py  fixtures.py  live_api_test.py  live_cli_test.py  live_gui_e2e.py  live_gui_test.py  smoke_test_docker.py  smoke_test_exe.py  test_api.py  test_categories.py  test_cli.py  test_docker.py  test_epub.py  test_export.py  test_gemini.py  test_gemini_cayenne.py  test_gui.py  test_merge_exports.py  test_paprika_db.py  test_pipeline.py  test_pipeline_controller.py  test_pipeline_resumability.py  test_recategorize.py  test_toc.py  test_utils.py
tests/snapshots/: test_stage_snapshots.py
tests/snapshots/__snapshots__/: test_stage_snapshots.ambr
tests/transient/: __init__.py  test_shadow_execution.py
tests/unit/: test_cli_adapter.py  test_pipeline.py  test_rate_limiter.py  test_select_reader.py
tests/unit/readers/: test_readers.py
tests/unit/stages/: test_stages.py
tests/unit/writers/: __init__.py  test_writers.py
