[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recipeparser"
version = "5.1.0"
description = "Extract recipes from EPUB cookbooks and export to Paprika 3"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ian Ballard"}
]
dependencies = [
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.3.1",
    "pydantic>=2.11.9",
    "google-genai>=1.38.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.1",
    "customtkinter>=5.2.2",
    "pymupdf>=1.24.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
recipeparser = "recipeparser.__main__:main"
recipeparser-gui = "recipeparser.gui:run_gui"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "syrupy>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["recipeparser*"]

[tool.setuptools.package-data]
recipeparser = ["*.yaml"]

[tool.pytest.ini_options]
# live_*_test.py files are standalone scripts that require a running server.
# They are NOT pytest suites — exclude them from the standard test run.
# collect_ignore is handled in conftest.py (the correct location for this setting).
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "transient: marks tests as transient (deleted in Phase 8 alongside legacy code)",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"recipeparser.io".msg = "core/ modules cannot import from io/ — violates hexagonal architecture"
"recipeparser.adapters".msg = "core/ modules cannot import from adapters/ — violates hexagonal architecture"

[tool.ruff.lint.per-file-ignores]
"recipeparser/io/**" = ["TID"]
"recipeparser/adapters/**" = ["TID"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "recipeparser.core.fsm"
disallow_untyped_defs = true
disallow_any_generics = true
